# Anvil

./: .gitignore  ANVIL.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: agent-architecture.md  directory-structure.md  memory-policy.md  model-routing.md  prompting.md  repo-instructions.md  runtime-overview.md  runtime-permissions.md  trust-model.md
examples/: anvil.md  config.example.toml  handoff.example.json
prompts/: editor.txt  pm.txt  reader.txt  reviewer.txt  tester.txt
schemas/: handoff-file.schema.json  role-registry.schema.json  session-state.schema.json
scripts/: lm_studio_smoke.sh
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  spinner.rs  walk.rs
tests/: agent_loop.rs  agent_phase.rs  alternating_loop_detection.rs  artifacts.rs  audit.rs  change_detection.rs  cli.rs  cli_args.rs  cli_session.rs  competitive_validation.rs  config.rs  config_bootstrap.rs  context_inject.rs  custom_commands.rs  hooks_system.rs  instructions.rs  lm_studio.rs  lm_studio_compat.rs  loop_detection.rs  mcp_integration.rs  memory.rs  model_classifier.rs  model_profiles.rs  ollama.rs  one_shot.rs  perf_budgets.rs  permissions.rs  phase_estimation.rs  plan.rs  pm_and_models.rs  policy_and_trust.rs  provider_integration.rs  redaction.rs  render.rs  retrieval.rs  role_registry.rs  runtime_and_tools.rs  runtime_flow.rs  session.rs  session_persistence.rs  (+15 more)
workspace/: anvil-agentmodels-cli-spec.md  anvil-concept.md  anvil-handoff-file.schema.json  anvil-implementation-plan.md  anvil-md-template.md  anvil-memory-policy.md  anvil-mvp-revision-plan.md  anvil-over-vibe-local-roadmap.md  anvil-pm-subagent-architecture.md  anvil-pm-system-prompt-draft.md  anvil-role-registry-integration.md  anvil-role-registry.json  anvil-runtime-permissions.md  anvil-state-model.md  anvil-subagent-system-prompts.md  anvil-tool-protocol.md  anvil-trust-model.md  anvil-vs-vibe-local-audit.md  design-principles.md  implementation-plan-phases.md  work-plan.md  (+9 more)
(+218 files in other folders)
