[package]
name = "anvil"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
tokio = { version = "1.45", features = ["full"] }
thiserror = "2.0"
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
