[package]
name = "anvil"
version = "0.0.2"
edition = "2024"

[dependencies]
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = { version = "1", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi", "registry"] }
tracing-appender = "0.2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
