[package]
name = "anvil"
version = "0.0.6"
edition = "2024"

[dependencies]
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi", "registry"] }
tracing-appender = "0.2"
signal-hook = "0.3"
similar = "2"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
shlex = "1.3"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
